feat: Optimize code and extend testing
Deleted Jenkinsfile2 and an unused assertion from ApplicationTests.java. Made significant improvements in the code readability in Employee.java, and added extensive unit tests to enhance code reliability. Finally, updated maven and jacoco plugin configurations in the project's pom.xml file.